src/k8s/apps/headplane/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headplane
  namespace: headscale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: headscale-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: headscale.levizitting.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: headplane
                port:
                  name: http
  tls:
    - secretName: headplane-tls
      hosts:
        - headscale.levizitting.com
